--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "d3": "^7.9.0",
+    "framer-motion": "^11.13.5",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.49",
